slurm-logs/snakemake_slurm.err

Lmod is automatically replacing "scicomp-python-env/2025.1" with "mamba/2025.1".

Assuming unrestricted shared filesystem usage.
Building DAG of jobs...
Your conda installation is not configured to use strict channel priorities. This is however crucial for having robust and correct environments (for details, see https://conda-forge.org/docs/user/tipsandtricks.html). Please consider to configure strict priorities by executing 'conda config --set channel_priority strict'.
Using shell: /usr/bin/bash
Provided cores: 4
Rules claiming more threads will be scaled down.
Job stats:
job          count
---------  -------
all              1
cluster          3
signature        6
total           10

Select jobs to execute...
Execute 3 jobs...

[Mon Jul 21 14:07:45 2025]
localrule cluster:
    input: data/processed/momo/all_features_clean.csv
    output: out/clusters/momo/gmm_cluster.csv, out/clusters/momo/gmm_cluster_centroids.csv, out/clusters/momo/gmm_cluster_covariances.csv, out/model_selection/momo/gmm_model_selection.csv
    jobid: 8
    reason: Params have changed since last execution
    wildcards: study=momo, algo=gmm
    resources: tmpdir=/tmp

[Mon Jul 21 14:07:45 2025]
localrule cluster:
    input: data/processed/globem/all_features_clean.csv
    output: out/clusters/globem/gmm_cluster.csv, out/clusters/globem/gmm_cluster_centroids.csv, out/clusters/globem/gmm_cluster_covariances.csv, out/model_selection/globem/gmm_model_selection.csv
    jobid: 11
    reason: Missing output files: out/clusters/globem/gmm_cluster_centroids.csv, out/clusters/globem/gmm_cluster.csv
    wildcards: study=globem, algo=gmm
    resources: tmpdir=/tmp

[Mon Jul 21 14:07:45 2025]
localrule cluster:
    input: data/processed/tesserae/all_features_clean.csv
    output: out/clusters/tesserae/gmm_cluster.csv, out/clusters/tesserae/gmm_cluster_centroids.csv, out/clusters/tesserae/gmm_cluster_covariances.csv, out/model_selection/tesserae/gmm_model_selection.csv
    jobid: 1
    reason: Params have changed since last execution
    wildcards: study=tesserae, algo=gmm
    resources: tmpdir=/tmp

Activating conda environment: .snakemake/conda/ab5233add898528c77eec06aa91604d6_
Activating conda environment: .snakemake/conda/ab5233add898528c77eec06aa91604d6_
Activating conda environment: .snakemake/conda/ab5233add898528c77eec06aa91604d6_
Activating conda environment: .snakemake/conda/ab5233add898528c77eec06aa91604d6_
Activating conda environment: .snakemake/conda/ab5233add898528c77eec06aa91604d6_
Activating conda environment: .snakemake/conda/ab5233add898528c77eec06aa91604d6_
Traceback (most recent call last):
Traceback (most recent call last):
  File "/scratch/work/luongn1/digirhythm-v2/.snakemake/scripts/tmpt3csyj4o.run.py", line 5, in <module>
  File "/scratch/work/luongn1/digirhythm-v2/.snakemake/scripts/tmp0bi8kplq.run.py", line 5, in <module>
    from gmm import GMMClustering
    from gmm import GMMClustering
  File "/scratch/work/luongn1/digirhythm-v2/workflow/rules/../scripts/clusters/gmm.py", line 3, in <module>
  File "/scratch/work/luongn1/digirhythm-v2/workflow/rules/../scripts/clusters/gmm.py", line 3, in <module>
Traceback (most recent call last):
  File "/scratch/work/luongn1/digirhythm-v2/.snakemake/scripts/tmpcfro0u1s.run.py", line 5, in <module>
    from base import BaseClustering
  File "/scratch/work/luongn1/digirhythm-v2/workflow/rules/../scripts/clusters/base.py", line 13
    threshold: int:
                  ^
SyntaxError: invalid syntax
    from gmm import GMMClustering
  File "/scratch/work/luongn1/digirhythm-v2/workflow/rules/../scripts/clusters/gmm.py", line 3, in <module>
    from base import BaseClustering
  File "/scratch/work/luongn1/digirhythm-v2/workflow/rules/../scripts/clusters/base.py", line 13
    threshold: int:
                  ^
SyntaxError: invalid syntax
    from base import BaseClustering
  File "/scratch/work/luongn1/digirhythm-v2/workflow/rules/../scripts/clusters/base.py", line 13
    threshold: int:
                  ^
SyntaxError: invalid syntax
RuleException:
CalledProcessError in file /scratch/work/luongn1/digirhythm-v2/workflow/rules/cluster.smk, line 31:
Command 'source /appl/scibuilder-mamba/aalto-rhel9/prod/software/mamba/2025.1/f67be15/bin/activate '/scratch/work/luongn1/digirhythm-v2/.snakemake/conda/ab5233add898528c77eec06aa91604d6_'; set -euo pipefail;  python /scratch/work/luongn1/digirhythm-v2/.snakemake/scripts/tmpcfro0u1s.run.py' returned non-zero exit status 1.
[Mon Jul 21 14:07:52 2025]
Error in rule cluster:
    jobid: 8
    input: data/processed/momo/all_features_clean.csv
    output: out/clusters/momo/gmm_cluster.csv, out/clusters/momo/gmm_cluster_centroids.csv, out/clusters/momo/gmm_cluster_covariances.csv, out/model_selection/momo/gmm_model_selection.csv
    conda-env: /scratch/work/luongn1/digirhythm-v2/.snakemake/conda/ab5233add898528c77eec06aa91604d6_

RuleException:
CalledProcessError in file /scratch/work/luongn1/digirhythm-v2/workflow/rules/cluster.smk, line 31:
Command 'source /appl/scibuilder-mamba/aalto-rhel9/prod/software/mamba/2025.1/f67be15/bin/activate '/scratch/work/luongn1/digirhythm-v2/.snakemake/conda/ab5233add898528c77eec06aa91604d6_'; set -euo pipefail;  python /scratch/work/luongn1/digirhythm-v2/.snakemake/scripts/tmp0bi8kplq.run.py' returned non-zero exit status 1.
[Mon Jul 21 14:07:52 2025]
Error in rule cluster:
    jobid: 11
    input: data/processed/globem/all_features_clean.csv
    output: out/clusters/globem/gmm_cluster.csv, out/clusters/globem/gmm_cluster_centroids.csv, out/clusters/globem/gmm_cluster_covariances.csv, out/model_selection/globem/gmm_model_selection.csv
    conda-env: /scratch/work/luongn1/digirhythm-v2/.snakemake/conda/ab5233add898528c77eec06aa91604d6_

RuleException:
CalledProcessError in file /scratch/work/luongn1/digirhythm-v2/workflow/rules/cluster.smk, line 31:
Command 'source /appl/scibuilder-mamba/aalto-rhel9/prod/software/mamba/2025.1/f67be15/bin/activate '/scratch/work/luongn1/digirhythm-v2/.snakemake/conda/ab5233add898528c77eec06aa91604d6_'; set -euo pipefail;  python /scratch/work/luongn1/digirhythm-v2/.snakemake/scripts/tmpt3csyj4o.run.py' returned non-zero exit status 1.
[Mon Jul 21 14:07:52 2025]
Error in rule cluster:
    jobid: 1
    input: data/processed/tesserae/all_features_clean.csv
    output: out/clusters/tesserae/gmm_cluster.csv, out/clusters/tesserae/gmm_cluster_centroids.csv, out/clusters/tesserae/gmm_cluster_covariances.csv, out/model_selection/tesserae/gmm_model_selection.csv
    conda-env: /scratch/work/luongn1/digirhythm-v2/.snakemake/conda/ab5233add898528c77eec06aa91604d6_

Shutting down, this might take some time.
Exiting because a job execution failed. Look above for error message
Complete log: .snakemake/log/2025-07-21T140741.735239.snakemake.log
WorkflowError:
At least one job did not complete successfully.
